@@ -1,30 +1,0 @@
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Etiam condimentum, est a placerat fermentum, lacus nisl eleifend nisl, vel laoreet metus neque id nibh. Morbi elementum leo sed sapien. Aliquam erat volutpat. Praesent mollis sapien et felis. Nulla ultricies odio id elit. Ut non quam eget nulla blandit iaculis. Phasellus convallis tempor enim. Nunc nec arcu. Sed hendrerit congue quam. Nulla fermentum tortor vitae lacus. Pellentesque a ante. Pellentesque sed justo. Proin facilisis mattis pede. Donec augue orci, pellentesque id, suscipit quis, placerat id, purus.
-
-.. sidebar:: The Sidebar
-
-   This is a real sidebar, declared with the sidebar directive.
-
-Quisque dignissim. Duis in velit vel augue rhoncus pretium. Duis non nisl in lorem placerat rutrum. Donec dui elit, blandit at, eleifend sagittis, rhoncus quis, orci. Vestibulum rutrum semper turpis. Nam pretium, mauris in varius venenatis, arcu dolor molestie justo, vitae suscipit elit diam eget dui. Phasellus elementum. Vestibulum ligula. Nunc quis enim. Sed eget augue. Maecenas convallis. Nunc pretium leo eget lectus. Ut a urna. Ut vel nunc eget leo vehicula commodo. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-
-Nunc nec diam. Phasellus adipiscing orci id arcu. Nulla consequat varius velit. Suspendisse erat risus, feugiat nec, ultricies quis, auctor porttitor, urna. Integer suscipit, purus dignissim cursus iaculis, nibh risus malesuada pede, nec cursus dolor augue eu velit. Aenean mi leo, condimentum quis, auctor quis, scelerisque at, urna. Nullam dapibus facilisis tellus. Ut ullamcorper varius massa. Suspendisse tempus felis sed pede. Sed et dolor vel ante dapibus porttitor. Nunc varius, nisl ut rutrum ullamcorper, ante quam varius tellus, quis semper nisl purus vitae ligula. Mauris sollicitudin neque. Nam faucibus aliquet purus. Donec est odio, fringilla nec, tempor et, fringilla a, ipsum. Donec urna ante, tristique quis, vehicula at, ultrices nec, mi. Suspendisse potenti. Pellentesque orci sem, posuere nec, blandit eu, feugiat eget, risus.
-
-Nunc erat. Nam non diam id leo rutrum placerat. Vivamus metus dolor, euismod eget, placerat et, auctor et, tellus. Integer eget nisi. Proin blandit. Vestibulum eu ipsum. Suspendisse volutpat malesuada ipsum. Praesent dignissim. Praesent bibendum tincidunt magna. Aenean blandit fermentum ligula. Aliquam eget ipsum quis justo porta fringilla. Suspendisse sit amet augue ac sapien placerat facilisis. Pellentesque venenatis tristique ante. Maecenas magna justo, euismod nec, sollicitudin sed, fringilla vulputate, mi. Nunc scelerisque viverra libero. Donec nec nisl. Etiam aliquet placerat ligula. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla vitae nisl pretium diam egestas faucibus. Fusce rutrum feugiat arcu.
-
-.. class:: sidebar
-
-This, on the other hand, is a plain old paragraph declared to be of *class* sidebar with the class directive. Any style with the float
-and width properties will do just fine. It's not justified because sidebar inherits normal, not bodytext.
-
-Sed mi. Integer sit amet ipsum. Vestibulum pulvinar volutpat nisl. Fusce posuere. Vivamus risus diam, auctor et, suscipit vitae, vestibulum quis, sapien. Etiam et purus. Nulla pellentesque. Quisque sed neque. Proin porta, mi ut mattis gravida, nunc nisl vestibulum magna, vitae consequat velit tellus at est. Sed ornare dictum sem. Cras neque odio, porttitor eu, semper in, hendrerit ut, erat. Suspendisse potenti.
-
-Sed sodales ullamcorper nibh. Vestibulum a arcu nec ligula consequat ullamcorper. Duis eu pede. Donec laoreet gravida ligula. Suspendisse dolor pede, tincidunt sed, ultrices eu, bibendum sed, enim. Donec tellus arcu, malesuada a, tempor vitae, luctus nec, odio. Suspendisse in augue. Suspendisse potenti. Suspendisse potenti. Curabitur venenatis odio vel nisl. Vestibulum sollicitudin erat id nibh. Aenean metus justo, semper non, volutpat et, laoreet non, massa. Morbi semper, mi et rutrum iaculis, nisi orci egestas nisi, in vehicula lectus diam in magna.
-
-Morbi dolor orci, rutrum eu, fringilla vel, aliquam sit amet, tortor. Maecenas consectetuer consectetuer nibh. Duis eu lacus. Fusce nec lectus nec metus mollis mollis. Fusce mollis, orci at fringilla eleifend, massa massa facilisis nulla, pretium ornare eros nibh ut dolor. Sed pharetra justo. Cras libero. Nulla ut ipsum. Etiam sed neque eget sapien lobortis bibendum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Sed faucibus nunc sed sem. Curabitur sit amet ligula. Sed porta turpis id augue. Praesent vel tortor eget eros pulvinar fringilla. Aliquam eget erat. Mauris semper, urna quis pellentesque ultrices, nisi sem tincidunt turpis, eu fermentum enim tellus rutrum velit. Integer metus leo, ullamcorper in, posuere vel, elementum at, nulla.
-
-.. class:: sidebar
-.. code-block:: python
-
-   print "You can not float anything using class"
-
-
-Cras at mauris. Morbi mi leo, semper quis, hendrerit nec, mattis in, pede. Aliquam erat volutpat. Aenean adipiscing faucibus odio. Donec tellus augue, dictum ac, dictum non, fermentum eu, nibh. Quisque at nunc ut velit eleifend auctor. Morbi hendrerit, ligula aliquet posuere rutrum, ligula nibh dictum sem, quis convallis pede enim sed elit. Praesent pulvinar eros non odio. Pellentesque odio risus, tincidunt a, pulvinar consequat, pulvinar sit amet, nulla. Donec felis eros, consectetuer a, fermentum eget, fermentum quis, arcu. Morbi ultrices nibh sit amet pede. Quisque vehicula pede at eros. Proin nec sem eu nisl vehicula dapibus. Cras sapien. Suspendisse ac turpis eu est ultrices sollicitudin. In lacinia, tortor sit amet rutrum venenatis, urna risus semper justo, in eleifend ipsum risus lacinia eros. Mauris non enim.
