@@ -1,4 +1,5 @@
 bad_md5 = [
+        '10d67f799b8c8372136274b013034f64',
         'f8f99fbb7b687340b1440ab610be382f',
         'sentinel'
 ]
