@@ -5,6 +5,7 @@ bad_md5 = [
 good_md5 = [
         '3895aada824383084a53955a5107a9e9',
         '404484d79853e0333aaa847846e4fc07',
+        '7c1713677676f715ee654c095aef2864',
         'b10434da6c6f28062503e5c0924ac805',
         'sentinel'
 ]
