@@ -9,6 +9,7 @@ good_md5 = [
         '48dc2e0e80c875b8117e8210598d75bc',
         '61b78f9333f3629d1fb74246e398afea',
         '8748ca044bde38ea86825079135b4ca9',
+        'd0c8cd54f4db431b52b57386bfe5fa7f',
         'sentinel'
 ]
 
