@@ -3,6 +3,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        '02a7c5dca3bb255b01c779d0076ea9e8',
         '34df4d0aad0828318aac97e785175050',
         '4bb9587e2798ea4b498926dda5a5093b',
         '68fcffc2dac5c560cceebb0043594679',
