@@ -3,6 +3,7 @@ bad_md5 = [
 ]
 
 good_md5 = [
+        'bde4467c8a36ef93a3bd4a783b1d759b',
         'f4ab727f7afaf654c9ca91d18f88b7da',
         'fc336aa409a8c5ff35e20d4c7952f551',
         'sentinel'
